--- a/IoTClient.Demo/IoTClient.Demo.csproj
+++ b/IoTClient.Demo/IoTClient.Demo.csproj
@@ -89,25 +89,25 @@
     <Compile Include="IndexForm.Designer.cs">
       <DependentUpon>IndexForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="ModBusTcpForm.cs">
-      <SubType>Form</SubType>
+    <Compile Include="ModBusTcpControl.cs">
+      <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="ModBusTcpForm.Designer.cs">
-      <DependentUpon>ModBusTcpForm.cs</DependentUpon>
+    <Compile Include="ModBusTcpControl.Designer.cs">
+      <DependentUpon>ModBusTcpControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SiemensForm.cs">
-      <SubType>Form</SubType>
+    <Compile Include="SiemensControl.cs">
+      <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="SiemensForm.Designer.cs">
-      <DependentUpon>SiemensForm.cs</DependentUpon>
+    <Compile Include="SiemensControl.Designer.cs">
+      <DependentUpon>SiemensControl.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="IndexForm.resx">
       <DependentUpon>IndexForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ModBusTcpForm.resx">
-      <DependentUpon>ModBusTcpForm.cs</DependentUpon>
+    <EmbeddedResource Include="ModBusTcpControl.resx">
+      <DependentUpon>ModBusTcpControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -119,8 +119,8 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="SiemensForm.resx">
-      <DependentUpon>SiemensForm.cs</DependentUpon>
+    <EmbeddedResource Include="SiemensControl.resx">
+      <DependentUpon>SiemensControl.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
