update IoTClient Tool ModbusRtu按住ctrl连接，可以自动组合参数扫描。 update IoTClient Tool 读、写按住ctrl可以显示报文

--- a/.gitignore
+++ b/.gitignore
@@ -272,3 +272,5 @@ __pycache__/
 /IoTClient/version.props
 /IoTServer/version.props
 /IoTServer/自增版本号打包.ps1
+/IoTClient/IoTClient/IoTClient.xml
+/IoTServer/IoTServer/IoTServer.xml
