SiemensClient 从发送命令到读取响应为最小单元

--- a/IoTServer/IoTServer.csproj
+++ b/IoTServer/IoTServer.csproj
@@ -30,11 +30,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="IoTClient" Version="0.0.14" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\IoTClient\IoTClient.csproj" />
   </ItemGroup>
 
 </Project>
