--- a/IoTClient.Tool/packages.config
+++ b/IoTClient.Tool/packages.config
@@ -1,15 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="BACnet.Core" version="1.0.30" targetFramework="net461" />
   <package id="Common.Logging" version="3.4.1" targetFramework="net461" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net461" />
   <package id="Costura.Fody" version="4.1.0" targetFramework="net461" />
   <package id="Fody" version="6.0.0" targetFramework="net461" developmentDependency="true" />
+  <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
-  <package id="PacketDotNet" version="0.16.0" targetFramework="net461" />
+  <package id="PacketDotNet" version="0.19.3" targetFramework="net461" />
   <package id="Pipelines.Sockets.Unofficial" version="2.0.22" targetFramework="net461" />
-  <package id="SharpPcap" version="4.4.0" targetFramework="net461" />
+  <package id="SharpPcap" version="4.5.0" targetFramework="net461" />
+  <package id="StackExchange.Redis" version="2.0.601" targetFramework="net461" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
   <package id="System.Diagnostics.PerformanceCounter" version="4.5.0" targetFramework="net461" />
   <package id="System.IO.Pipelines" version="4.5.1" targetFramework="net461" />
@@ -17,6 +18,9 @@
   <package id="System.Memory" version="4.5.1" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Channels" version="4.5.0" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net461" />
+  <package id="Talk.BACnet" version="1.0.2" targetFramework="net461" />
+  <package id="Talk.Redis" version="1.0.3" targetFramework="net461" />
 </packages>
