--- a/IoTClient/IoTClient.csproj
+++ b/IoTClient/IoTClient.csproj
@@ -32,10 +32,12 @@
 
   <ItemGroup>
     <Compile Remove="Clients\PLC\OmronFinsClient.cs" />
+    <Compile Remove="Models\MitsubishiA1Data.cs" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Clients\Bacnet\" />
+    <Folder Include="Constants\" />
   </ItemGroup>
 
   <ItemGroup>
